# aocl-blis

./: .gitignore  CMakeLists.txt  Config.cmake.in
aocl_dtl/: CMakeLists.txt
bench/: CMakeLists.txt
blastest/: CMakeLists.txt
blastest/f2c/: CMakeLists.txt
blastest/src/: CMakeLists.txt
config/: CMakeLists.txt
config/bgq/: bli_cntx_init_bgq.c
config/bulldozer/: bli_cntx_init_bulldozer.c
config/cortexa15/: bli_cntx_init_cortexa15.c
config/cortexa53/: bli_cntx_init_cortexa53.c
config/cortexa57/: bli_cntx_init_cortexa57.c
config/cortexa9/: bli_cntx_init_cortexa9.c
config/excavator/: bli_cntx_init_excavator.c
config/generic/: CMakeLists.txt
config/haswell/: CMakeLists.txt  bli_cntx_init_haswell.c
config/knc/: bli_cntx_init_knc.c
config/knl/: bli_cntx_init_knl.c
config/penryn/: bli_cntx_init_penryn.c
config/piledriver/: bli_cntx_init_piledriver.c
config/power7/: bli_cntx_init_power7.c
config/power9/: bli_cntx_init_power9.c
config/sandybridge/: bli_cntx_init_sandybridge.c
config/skx/: bli_cntx_init_skx.c
config/steamroller/: bli_cntx_init_steamroller.c
config/thunderx2/: bli_cntx_init_thunderx2.c
config/zen/: CMakeLists.txt  amd_config.mk  bli_cntx_init_zen.c  make_defs.mk
config/zen2/: CMakeLists.txt  bli_cntx_init_zen2.c  bli_family_zen2.h  make_defs.mk
config/zen3/: CMakeLists.txt
config/zen4/: CMakeLists.txt
frame/: CMakeLists.txt
frame/0/: CMakeLists.txt
frame/0/copysc/: CMakeLists.txt
frame/1/: CMakeLists.txt
frame/1d/: CMakeLists.txt
frame/1f/: CMakeLists.txt
frame/1m/: CMakeLists.txt
frame/1m/packm/: CMakeLists.txt
frame/1m/unpackm/: CMakeLists.txt
frame/2/: CMakeLists.txt
frame/2/gemv/: CMakeLists.txt
frame/2/ger/: CMakeLists.txt
frame/2/hemv/: CMakeLists.txt
frame/2/her/: CMakeLists.txt
frame/2/her2/: CMakeLists.txt
frame/2/symv/: CMakeLists.txt
frame/2/syr/: CMakeLists.txt
frame/2/syr2/: CMakeLists.txt
frame/2/trmv/: CMakeLists.txt
frame/2/trsv/: CMakeLists.txt
frame/3/: CMakeLists.txt  bli_l3_blocksize.c  bli_l3_oapi.c  bli_l3_tapi.c  bli_l3_ukr_prot.h
frame/3/gemm/: CMakeLists.txt  bli_gemm_ker_var2.c  bli_gemm_var.h
frame/3/gemm/ind/: CMakeLists.txt
frame/3/gemmt/: CMakeLists.txt
frame/3/hemm/: CMakeLists.txt
frame/3/her2k/: CMakeLists.txt
frame/3/herk/: CMakeLists.txt
frame/3/symm/: CMakeLists.txt
frame/3/syr2k/: CMakeLists.txt
frame/3/syrk/: CMakeLists.txt
frame/3/trmm/: CMakeLists.txt
frame/3/trmm3/: CMakeLists.txt
frame/3/trsm/: CMakeLists.txt  bli_trsm_blk_var1.c  bli_trsm_blk_var2.c  bli_trsm_ll_ker_var2.c
frame/base/: CMakeLists.txt  bli_blksz.c  bli_blksz.h  bli_cntx.c  bli_cntx.h
frame/base/cast/: CMakeLists.txt
frame/base/check/: CMakeLists.txt
frame/base/noopt/: CMakeLists.txt
frame/base/proj/: CMakeLists.txt
frame/compat/: CMakeLists.txt  bla_axpy.c  bla_gemm.c  bla_imatcopy.c  bla_trsm.c
frame/compat/attic/: CMakeLists.txt
frame/compat/blis/thread/: CMakeLists.txt
frame/compat/cblas/: CMakeLists.txt
frame/compat/cblas/f77_sub/: CMakeLists.txt
frame/compat/cblas/src/: CMakeLists.txt
frame/compat/check/: CMakeLists.txt
frame/compat/f2c/: CMakeLists.txt
frame/compat/f2c/util/: CMakeLists.txt
frame/include/: bli_genarray_macro_defs.h  bli_gentfunc_macro_defs.h  bli_gentprot_macro_defs.h  bli_lang_defs.h  bli_param_macro_defs.h  bli_type_defs.h
frame/include/level0/: bli_adds_mxn.h
frame/include/level0/ri/: bli_axpbyjris.h  bli_axpbyris.h  bli_xpbyjris.h  bli_xpbyris.h
frame/ind/: CMakeLists.txt
frame/ind/cntx/: CMakeLists.txt
frame/ind/oapi/: CMakeLists.txt
frame/ind/tapi/: CMakeLists.txt
frame/ind/ukernels/: CMakeLists.txt
frame/thread/: CMakeLists.txt
frame/util/: CMakeLists.txt
kernels/: CMakeLists.txt
kernels/haswell/: CMakeLists.txt
kernels/haswell/1m/: CMakeLists.txt
kernels/haswell/3/: CMakeLists.txt
kernels/haswell/3/sup/: CMakeLists.txt
kernels/haswell/3/sup/d6x8/: CMakeLists.txt
kernels/haswell/3/sup/s6x16/: CMakeLists.txt
kernels/piledriver/: CMakeLists.txt
kernels/piledriver/3/: CMakeLists.txt
kernels/skx/: CMakeLists.txt
kernels/skx/3/: CMakeLists.txt
kernels/zen/: CMakeLists.txt  bli_kernels_zen.h
kernels/zen/1/: CMakeLists.txt  bli_axpbyv_zen_int.c
kernels/zen/1f/: CMakeLists.txt
kernels/zen/2/: CMakeLists.txt
kernels/zen/3/: CMakeLists.txt  bli_gemm_l_zen_asm_d6x8.c  bli_gemm_small.c  bli_gemm_u_zen_asm_d6x8.c  bli_trsm_small.c
kernels/zen/3/sup/: CMakeLists.txt
kernels/zen/util/: CMakeLists.txt
kernels/zen4/: CMakeLists.txt
kernels/zen4/1/: CMakeLists.txt
kernels/zen4/3/: CMakeLists.txt
ref_kernels/: CMakeLists.txt
ref_kernels/1/: CMakeLists.txt
ref_kernels/1f/: CMakeLists.txt
ref_kernels/1m/: CMakeLists.txt
ref_kernels/3/: CMakeLists.txt
ref_kernels/3/bb/: CMakeLists.txt
ref_kernels/ind/: CMakeLists.txt
test/: CMakeLists.txt  Makefile  test_gemmt.c  test_trsm.c
testsuite/: CMakeLists.txt
testsuite/src/: CMakeLists.txt
