## Copyright (C) 2021, Advanced Micro Devices, Inc. All rights reserved.##

if(${TARGET_ARCH} STREQUAL amdzen)
    add_subdirectory(${CMAKE_CURRENT_BINARY_DIR}/generic ${CMAKE_CURRENT_BINARY_DIR}/generic)
    add_subdirectory(${CMAKE_CURRENT_BINARY_DIR}/zen ${CMAKE_CURRENT_BINARY_DIR}/zen)
    add_subdirectory(${CMAKE_CURRENT_BINARY_DIR}/zen2 ${CMAKE_CURRENT_BINARY_DIR}/zen2)
    add_subdirectory(${CMAKE_CURRENT_BINARY_DIR}/zen3 ${CMAKE_CURRENT_BINARY_DIR}/zen3)
    add_subdirectory(${CMAKE_CURRENT_BINARY_DIR}/zen4 ${CMAKE_CURRENT_BINARY_DIR}/zen4)
else()
    target_sources(${TARGET_NAME} PRIVATE bli_cntx_ref.c)
    add_subdirectory(1)
    add_subdirectory(1f)
    add_subdirectory(1m)
    add_subdirectory(3)
    add_subdirectory(ind)
endif()
